# eskimos-2.0

./: .env.example  .gitignore  ESKIMOS_INSTALUJ.pyw  README.md  pyproject.toml
portable/EskimosGateway/: FIX_AND_RESTART.bat  STOP_ALL.bat
scripts/: INSTALL_DRIVER.bat  INSTALL_SERVICE.bat  README.txt  build_exe.py  build_portable.py  install.bat  install.ps1  test_jsonrpc.py  update.bat
src/eskimos/: __init__.py  __main__.py
src/eskimos/adapters/ai/: __init__.py  base.py  claude.py
src/eskimos/adapters/modem/: __init__.py  base.py  jsonrpc.py  mock.py  puppeteer.py  serial_at.py
src/eskimos/api/: __init__.py  auth.py  dependencies.py  main.py
src/eskimos/api/routes/: __init__.py  campaigns.py  contacts.py  dashboard.py  health.py  modems.py  sms.py  updates.py
src/eskimos/api/static/css/: style.css
src/eskimos/api/static/js/: app.js
src/eskimos/api/templates/: base.html  dashboard.html  settings.html  sms.html
src/eskimos/application/workflows/: campaign_executor.py
src/eskimos/cli/: __init__.py  main.py  modem.py  send.py  serve.py
src/eskimos/core/entities/: __init__.py  campaign.py  contact.py  modem.py  sms.py
src/eskimos/core/repositories/: __init__.py  base.py  campaign.py  contact.py  memory.py
src/eskimos/core/services/: __init__.py  campaign_service.py  contact_service.py
src/eskimos/infrastructure/: __init__.py  config.py  daemon.py  updater.py
src/eskimos/infrastructure/daemon/: __init__.py  __main__.py  at_commands.py  command_handlers.py  commands.py  config.py  diagnostics.py  heartbeat.py  identity.py  log.py  loop.py  modem_control.py  modem_status.py  process.py  sms_incoming.py  sms_metrics.py  sms_outgoing.py  sms_storage.py  tunnel.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_entities.py  test_mock_modem.py
